--- a/src/index.css
+++ b/src/index.css
@@ -11,14 +11,6 @@ body {
   }
 }
 
-/* #mapid {
-  height: 180px;
+#menu_container::-webkit-scrollbar {
+  display: none;
 }
-
-#root {
-  width: 100%;
-}
-
-.nav {
-  margin-left: -100px;
-} */
