--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,11 @@
   font-size: large;
 }
 
+::-webkit-scrollbar {
+  width: 0px; /* remove scrollbar space */
+  background: transparent; /* optional: just make scrollbar invisible */
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
